--- a/cea/default.config
+++ b/cea/default.config
@@ -1709,7 +1709,12 @@ release-version =
 release-version.type = StringParameter
 release-version.help = Version number for new release in Semantic Versioning format (e.g., 1.0.0)
 
-[plots-bar-demand]
+[plots-demand]
+
+plot-type = bar_plot
+plot-type.type = ChoiceParameter
+plot-type.choices = bar_plot
+plot-type.help = Select the type of plot to generate
 
 buildings =
 buildings.type = BuildingsParameter
@@ -1756,13 +1761,13 @@ Y-label.category = Y-axis settings
 
 X-to-plot = by_building
 X-to-plot.type = ChoiceParameter
-X-to-plot.choices = by_district, by_building, by_time_period_hourly, by_time_period_daily, by_time_period_monthly, by_time_period_seasonal, by_time_period_annually_or_selected
+X-to-plot.choices = by_building, by_district_and_time_period_hourly, by_district_and_time_period_daily, by_district_and_time_period_monthly, by_district_and_time_period_seasonally, by_district_and_time_period_annually_or_selected
 X-to-plot.help = Select the column to plot on the X-axis
 
 X-faceted = no_facet
 X-faceted.type = ChoiceParameter
 X-faceted.choices = no_facet, by_months, by_seasons
-X-faceted.help = Select the faceting method for the X-axis
+X-faceted.help = Select the faceting method for the X-axis. Selection is only valid when X-to-plot is set to by_building.
 X-faceted.category = X-axis settings
 
 X-label =
