before process the data

--- a/cea/default.config
+++ b/cea/default.config
@@ -1722,18 +1722,18 @@ buildings.help = List of buildings selected to plot. Leave blank when to select 
 
 Y-metric-to-plot = end_use
 Y-metric-to-plot.type = ChoiceParameter
-Y-metric-to-plot.choices = end_use, final_use
-Y-metric-to-plot.help = Select the metric to plot for the Y-axis
+Y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
+Y-metric-to-plot.help = Select the metric to plot for the Y-axis.
 
 Y-metric-unit = MWh
 Y-metric-unit.type = ChoiceParameter
 Y-metric-unit.choices = MWh, kWh, Wh
-Y-metric-unit.help = Select the unit of the metric to plot for the Y-axis
+Y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
 
 Y-normalised-by = gross_floor_area,
 Y-normalised-by.type = ChoiceParameter
 Y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
-Y-normalised-by.help = Select the normalisation factor
+Y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 Y-min =
 Y-min.type = RealParameter
