--- a/cea/default.config
+++ b/cea/default.config
@@ -1721,9 +1721,9 @@ buildings.type = BuildingsParameter
 buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
 
 Y-metric-to-plot = end_use
-Y-metric-to-plot.type = ChoiceParameter
+Y-metric-to-plot.type = MultiChoiceParameter
 Y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
-Y-metric-to-plot.help = Select the metric to plot for the Y-axis.
+Y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
 Y-metric-unit = MWh
 Y-metric-unit.type = ChoiceParameter
@@ -1761,14 +1761,17 @@ Y-label.category = Y-axis settings
 
 X-to-plot = by_building
 X-to-plot.type = ChoiceParameter
-X-to-plot.choices = by_building, by_district_and_time_period_hourly, by_district_and_time_period_daily, by_district_and_time_period_monthly, by_district_and_time_period_seasonally, by_district_and_time_period_annually_or_selected
-X-to-plot.help = Select the column to plot on the X-axis
+X-to-plot.choices = by_building, by_building_faceted_by_months, by_building_faceted_by_seasons, by_building_faceted_by_construction_type, by_building_faceted_by_main_use_type, by_district_and_hourly, by_district_and_daily, by_district_and_monthly, by_district_and_seasonally, by_district_and_annually_or_selected_period
+X-to-plot.help = Select the column to plot on the X-axis.
 
-X-faceted = no_facet
-X-faceted.type = ChoiceParameter
-X-faceted.choices = no_facet, by_months, by_seasons
-X-faceted.help = Select the faceting method for the X-axis. Selection is only valid when X-to-plot is set to by_building.
-X-faceted.category = X-axis settings
+X-sorted = by_default
+X-sorted.type = ChoiceParameter
+X-sorted.choices = by_default, by_construction_year, by_gross_floor_area, by_conditioned_floor_area, by_roof_area
+X-sorted.help = Select the sorting method (from high to low) for the X-axis, when X-to-plot is set to by_building choices.
+
+X-sorted-reversed = False
+X-sorted-reversed.type = BooleanParameter
+X-sorted-reversed.help = Ture to sort from low to high.
 
 X-label =
 X-label.type = StringParameter
@@ -1780,33 +1783,34 @@ filter-buildings-by-year-start = 1900
 filter-buildings-by-year-start.type = IntegerParameter
 filter-buildings-by-year-start.nullable = true
 filter-buildings-by-year-start.help = Enforce a filter to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
-filter-buildings-by-year-start.category = Filter by building construction time & type and use type
+filter-buildings-by-year-start.category = Filter by building construction time, type and use type
 
 filter-buildings-by-year-end = 2050
 filter-buildings-by-year-end.type = IntegerParameter
 filter-buildings-by-year-end.nullable = true
 filter-buildings-by-year-end.help = Enforce a filter to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
-filter-buildings-by-year-end.category = Filter by building construction time & type and use type
+filter-buildings-by-year-end.category = Filter by building construction time, type and use type
 
 filter-buildings-by-construction-type =
 filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
 filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction_type archetypes. Leave blank to select all.
 filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
 filter-buildings-by-construction-type.column = const_type
-filter-buildings-by-construction-type.category = Filter by building construction time & type and use type
+filter-buildings-by-construction-type.category = Filter by building construction time, type and use type
 
 filter-buildings-by-use-type =
 filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
 filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
 filter-buildings-by-use-type.locator = get_database_archetypes_use_type
 filter-buildings-by-use-type.column = use_type
-filter-buildings-by-use-type.category = Filter by building construction time & type and use type
+filter-buildings-by-use-type.category = Filter by building construction time, type and use type
 
 min-ratio-as-main-use = 0
 min-ratio-as-main-use.type= RealParameter
 min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
-min-ratio-as-main-use.category = Filter by building construction time & type and use type
+min-ratio-as-main-use.category = Filter by building construction time, type and use type
 
 transposed = False
 transposed.type = BooleanParameter
-transposed.help = True to transpose the table
+transposed.help = True to transpose the table.
+
