before the unit

--- a/cea/default.config
+++ b/cea/default.config
@@ -1720,64 +1720,64 @@ buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
 
-Y-metric-to-plot = end_use
-Y-metric-to-plot.type = MultiChoiceParameter
-Y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
-Y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
+y-metric-to-plot = grid_electricity_consumption
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
+y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
-Y-metric-unit = MWh
-Y-metric-unit.type = ChoiceParameter
-Y-metric-unit.choices = MWh, kWh, Wh
-Y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
+y-metric-unit = MWh
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = MWh, kWh, Wh
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
 
-Y-normalised-by = gross_floor_area,
-Y-normalised-by.type = ChoiceParameter
-Y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
-Y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+y-normalised-by = gross_floor_area,
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
-Y-min =
-Y-min.type = RealParameter
-Y-min.nullable = true
-Y-min.help = Set the minimum value for the Y-axis
-Y-min.category = Y-axis settings
+y-min =
+y-min.type = RealParameter
+y-min.nullable = true
+y-min.help = Set the minimum value for the Y-axis
+y-min.category = Y-axis settings
 
-Y-max =
-Y-max.type = RealParameter
-Y-max.nullable = true
-Y-max.help = Set the maximum value for the Y-axis
-Y-max.category = Y-axis settings
+y-max =
+y-max.type = RealParameter
+y-max.nullable = true
+y-max.help = Set the maximum value for the Y-axis
+y-max.category = Y-axis settings
 
-Y-step =
-Y-step.type = RealParameter
-Y-step.nullable = true
-Y-step.help = Set the step size for the Y-axis
-Y-step.category = Y-axis settings
+y-step =
+y-step.type = RealParameter
+y-step.nullable = true
+y-step.help = Set the step size for the Y-axis
+y-step.category = Y-axis settings
 
-Y-label =
-Y-label.type = StringParameter
-Y-label.nullable = true
-Y-label.help = Customise the label for the Y-axis
-Y-label.category = Y-axis settings
+y-label =
+y-label.type = StringParameter
+y-label.nullable = true
+y-label.help = Customise the label for the Y-axis
+y-label.category = Y-axis settings
 
-X-to-plot = by_building
-X-to-plot.type = ChoiceParameter
-X-to-plot.choices = by_building, by_building_faceted_by_months, by_building_faceted_by_seasons, by_building_faceted_by_construction_type, by_building_faceted_by_main_use_type, by_district_and_hourly, by_district_and_daily, by_district_and_monthly, by_district_and_seasonally, by_district_and_annually_or_selected_period
-X-to-plot.help = Select the column to plot on the X-axis.
+x-to-plot = by_building
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = by_building, by_building_faceted_by_months, by_building_faceted_by_seasons, by_building_faceted_by_construction_type, by_building_faceted_by_main_use_type, by_district_and_hourly, by_district_and_daily, by_district_and_monthly, by_district_and_seasonally, by_district_and_annually_or_selected_period
+x-to-plot.help = Select the column to plot on the X-axis.
 
-X-sorted = by_default
-X-sorted.type = ChoiceParameter
-X-sorted.choices = by_default, by_construction_year, by_gross_floor_area, by_conditioned_floor_area, by_roof_area
-X-sorted.help = Select the sorting method (from high to low) for the X-axis, when X-to-plot is set to by_building choices.
+x-sorted = by_default
+x-sorted.type = ChoiceParameter
+x-sorted.choices = by_default, by_construction_year, by_gross_floor_area, by_conditioned_floor_area, by_roof_area
+x-sorted.help = Select the sorting method (from high to low) for the X-axis, when X-to-plot is set to by_building choices.
 
-X-sorted-reversed = False
-X-sorted-reversed.type = BooleanParameter
-X-sorted-reversed.help = Ture to sort from low to high.
+x-sorted-reversed = False
+x-sorted-reversed.type = BooleanParameter
+x-sorted-reversed.help = Ture to sort from low to high.
 
-X-label =
-X-label.type = StringParameter
-X-label.nullable = true
-X-label.help = Customise the label for the X-axis
-X-label.category = X-axis settings
+x-label =
+x-label.type = StringParameter
+x-label.nullable = true
+x-label.help = Customise the label for the X-axis
+x-label.category = X-axis settings
 
 filter-buildings-by-year-start = 1900
 filter-buildings-by-year-start.type = IntegerParameter
