ready to feed in plotly

--- a/cea/default.config
+++ b/cea/default.config
@@ -1768,10 +1768,12 @@ x-sorted = by_default
 x-sorted.type = ChoiceParameter
 x-sorted.choices = by_default, by_construction_year, by_gross_floor_area, by_conditioned_floor_area, by_roof_area
 x-sorted.help = Select the sorting method (from high to low) for the X-axis, when X-to-plot is set to by_building choices.
+x-sorted.category = X-axis settings
 
 x-sorted-reversed = False
 x-sorted-reversed.type = BooleanParameter
 x-sorted-reversed.help = Ture to sort from low to high.
+x-sorted-reversed.category = X-axis settings
 
 x-label =
 x-label.type = StringParameter
