--- a/cea/default.config
+++ b/cea/default.config
@@ -1714,7 +1714,7 @@ release-version.help = Version number for new release in Semantic Versioning for
 plot-type = bar_plot
 plot-type.type = ChoiceParameter
 plot-type.choices = bar_plot
-plot-type.help = Select the type of plot to generate
+plot-type.help = Select the type of plot.
 
 buildings =
 buildings.type = BuildingsParameter
@@ -1738,25 +1738,25 @@ y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 y-min =
 y-min.type = RealParameter
 y-min.nullable = true
-y-min.help = Set the minimum value for the Y-axis
+y-min.help = Set the minimum value for the Y-axis.
 y-min.category = Y-axis settings
 
 y-max =
 y-max.type = RealParameter
 y-max.nullable = true
-y-max.help = Set the maximum value for the Y-axis
+y-max.help = Set the maximum value for the Y-axis.
 y-max.category = Y-axis settings
 
 y-step =
 y-step.type = RealParameter
 y-step.nullable = true
-y-step.help = Set the step size for the Y-axis
+y-step.help = Set the step size for the Y-axis.
 y-step.category = Y-axis settings
 
 y-label =
 y-label.type = StringParameter
 y-label.nullable = true
-y-label.help = Customise the label for the Y-axis
+y-label.help = Customise the label for the Y-axis.
 y-label.category = Y-axis settings
 
 x-to-plot = by_building
@@ -1778,7 +1778,7 @@ x-sorted-reversed.category = X-axis settings
 x-label =
 x-label.type = StringParameter
 x-label.nullable = true
-x-label.help = Customise the label for the X-axis
+x-label.help = Customise the label for the X-axis.
 x-label.category = X-axis settings
 
 filter-buildings-by-year-start = 1900
