--- a/cea/default.config
+++ b/cea/default.config
@@ -1725,10 +1725,11 @@ y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
-y-metric-unit = MWh
+y-metric-unit = kWh
 y-metric-unit.type = ChoiceParameter
 y-metric-unit.choices = MWh, kWh, Wh
 y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
+y-metric-unit.category = Y-axis settings
 
 y-normalised-by = gross_floor_area,
 y-normalised-by.type = ChoiceParameter
