group not facet

--- a/cea/default.config
+++ b/cea/default.config
@@ -1711,6 +1711,11 @@ release-version.help = Version number for new release in Semantic Versioning for
 
 [plots-demand]
 
+plot-title =
+plot-title.type = StringParameter
+plot-title.nullable = true
+plot-title.help = Customise the plot title.
+
 plot-type = bar_plot
 plot-type.type = ChoiceParameter
 plot-type.choices = bar_plot
@@ -1762,7 +1767,7 @@ y-label.category = Y-axis settings
 
 x-to-plot = by_building
 x-to-plot.type = ChoiceParameter
-x-to-plot.choices = by_building, by_building_faceted_by_months, by_building_faceted_by_seasons, by_building_faceted_by_construction_type, by_building_faceted_by_main_use_type, by_district_and_hourly, by_district_and_daily, by_district_and_monthly, by_district_and_seasonally, by_district_and_annually_or_selected_period
+x-to-plot.choices = by_building, by_building_grouped_by_months, by_building_grouped_by_seasons, by_building_grouped_by_construction_type, by_building_grouped_by_main_use_type, by_district_and_hourly, by_district_and_daily, by_district_and_monthly, by_district_and_seasonally, by_district_and_annually_or_selected_period
 x-to-plot.help = Select the column to plot on the X-axis.
 
 x-sorted = by_default
