--- a/cea/default.config
+++ b/cea/default.config
@@ -1759,27 +1759,39 @@ y-step.nullable = true
 y-step.help = Set the step size for the Y-axis.
 y-step.category = Y-axis settings
 
+y-barmode = group
+y-barmode.type = ChoiceParameter
+y-barmode.choices = group, stack, stack_percentage, relative
+y-barmode.help = Select the barmode for the Y-axis.
+y-barmode.category = Y-axis settings
+
 y-label =
 y-label.type = StringParameter
 y-label.nullable = true
 y-label.help = Customise the label for the Y-axis.
 y-label.category = Y-axis settings
 
-x-to-plot = by_building
+x-to-plot = building
 x-to-plot.type = ChoiceParameter
-x-to-plot.choices = by_building, by_building_grouped_by_months, by_building_grouped_by_seasons, by_building_grouped_by_construction_type, by_building_grouped_by_main_use_type, by_district_and_hourly, by_district_and_daily, by_district_and_monthly, by_district_and_seasonally, by_district_and_annually_or_selected_period
+x-to-plot.choices = building, building_grouped_by_months, building_grouped_by_seasons, building_grouped_by_construction_type, building_grouped_by_main_use_type, district_and_hourly, district_and_daily, district_and_monthly, district_and_seasonally, district_and_annually_or_selected_period
 x-to-plot.help = Select the column to plot on the X-axis.
 
-x-sorted = by_default
-x-sorted.type = ChoiceParameter
-x-sorted.choices = by_default, by_construction_year, by_gross_floor_area, by_conditioned_floor_area, by_roof_area
-x-sorted.help = Select the sorting method (from high to low) for the X-axis, when X-to-plot is set to by_building choices.
-x-sorted.category = X-axis settings
+x-sorted-by = by_default
+x-sorted-by.type = ChoiceParameter
+x-sorted-by.choices = default, construction_year, gross_floor_area, conditioned_floor_area, roof_area
+x-sorted-by.help = Select the sorting method (from high to low) for the X-axis, when X-to-plot is set to by_building choices.
+x-sorted-by.category = X-axis settings
 
 x-sorted-reversed = False
 x-sorted-reversed.type = BooleanParameter
 x-sorted-reversed.help = Ture to sort from low to high.
 x-sorted-reversed.category = X-axis settings
+
+x-faceted-by =
+x-faceted-by.type = ChoiceParameter
+x-faceted-by.choices = no_faceting, construction_type, by_main_use_type, by_season, by_month
+x-faceted-by.help = Select the column to facet on the X-axis.
+x-faceted-by.category = X-axis settings
 
 x-label =
 x-label.type = StringParameter
