--- a/cea/default.config
+++ b/cea/default.config
@@ -1773,7 +1773,7 @@ y-label.category = Y-axis settings
 
 x-to-plot = building
 x-to-plot.type = ChoiceParameter
-x-to-plot.choices = building, building_grouped_by_months, building_grouped_by_seasons, building_grouped_by_construction_type, building_grouped_by_main_use_type, district_and_hourly, district_and_daily, district_and_monthly, district_and_seasonally, district_and_annually_or_selected_period
+x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
 x-to-plot.help = Select the column to plot on the X-axis.
 
 x-sorted-by = by_default
@@ -1786,12 +1786,6 @@ x-sorted-reversed = False
 x-sorted-reversed.type = BooleanParameter
 x-sorted-reversed.help = Ture to sort from low to high.
 x-sorted-reversed.category = X-axis settings
-
-x-faceted-by =
-x-faceted-by.type = ChoiceParameter
-x-faceted-by.choices = no_faceting, construction_type, by_main_use_type, by_season, by_month
-x-faceted-by.help = Select the column to facet on the X-axis.
-x-faceted-by.category = X-axis settings
 
 x-label =
 x-label.type = StringParameter
@@ -1830,7 +1824,4 @@ min-ratio-as-main-use.type= RealParameter
 min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
 min-ratio-as-main-use.category = Filter by building construction time, type and use type
 
-transposed = False
-transposed.type = BooleanParameter
-transposed.help = True to transpose the table.
 
