--- a/cea/default.config
+++ b/cea/default.config
@@ -1761,7 +1761,7 @@ y-step.category = Y-axis settings
 
 y-barmode = group
 y-barmode.type = ChoiceParameter
-y-barmode.choices = group, stack, stack_percentage, relative
+y-barmode.choices = group, stack, stack_percentage
 y-barmode.help = Select the barmode for the Y-axis.
 y-barmode.category = Y-axis settings
 
@@ -1775,6 +1775,16 @@ x-to-plot = building
 x-to-plot.type = ChoiceParameter
 x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
 x-to-plot.help = Select the column to plot on the X-axis.
+
+facet-by-numbers-wrapped = 3
+facet-by-numbers-wrapped.type = IntegerParameter
+facet-by-numbers-wrapped.help = Number of columns or rows to wrap.
+facet-by-numbers-wrapped.category = X-axis settings
+
+facet-by-rows = False
+facet-by-rows.type = BooleanParameter
+facet-by-rows.help = True if faceting by rows. False if faceting by columns.
+facet-by-rows.category = X-axis settings
 
 x-sorted-by = by_default
 x-sorted-by.type = ChoiceParameter
