--- a/cea/default.config
+++ b/cea/default.config
@@ -125,6 +125,67 @@ weather =
 weather.type = WeatherPathParameter
 weather.help = Path to a weather file (.epw) or the label of one CEA Built-in weather file. Leave blank to fetch from third-party sources.
 
+
+[radiation-usr]
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings considered for the radiation simulation in the format of [BuildingID1, BuildingID2, ...]. Leave blank when simulating all buildings.
+
+use-latest-usr-binaries = true
+use-latest-usr-binaries.type = BooleanParameter
+use-latest-usr-binaries.help = True to use the latest USR binaries which is faster and able to run larger sites, yet producing non-deterministic results. False to use old binary for reproducibility. Applicable only to Windows and will be ignored otherwise.
+use-latest-usr-binaries.category = Advanced
+
+albedo = 0.2
+albedo.type = RealParameter
+albedo.help = Albedo of the terrain.
+albedo.category = Parameters for usr
+
+calculate-sensor-data = true
+calculate-sensor-data.type = BooleanParameter
+calculate-sensor-data.help =  False to only calculate total radiation for each building-facing orientation via polygon clipping method. If only demand calculations are needed, set it to false; if need to calculate radiation data for each grid point (only needed for running solar technologies), set it to true.
+calculate-sensor-data.category = Advanced
+
+using-cea-sensor = true
+using-cea-sensor.type = BooleanParameter
+using-cea-sensor.help =  True to use the cea-daysim method to generate sensor csv files. False to use the USR method to generate sensor csv files (more fast).
+using-cea-sensor.category = Advanced
+
+roof-grid = 1
+roof-grid.type = RealParameter
+roof-grid.help =  Grid resolution of the roof surfaces (m) for USR grid generation method.
+roof-grid.category = Level of Details
+
+walls-grid = 1
+walls-grid.type = RealParameter
+walls-grid.help = Grid resolution of wall surfaces (m) for USR grid generation method.
+walls-grid.category = Level of Details
+
+zone-geometry = 0
+zone-geometry.type = RealParameter
+zone-geometry.help = Simplification level of zone geometry; tolerance distance of points in meters from original.
+zone-geometry.category = Level of Details
+
+surrounding-geometry = 0
+surrounding-geometry.type = RealParameter
+surrounding-geometry.help = Simplification level of surroundings geometry; tolerance distance of points in meters from original.
+surrounding-geometry.category = Level of Details
+
+neglect-adjacent-buildings = false
+neglect-adjacent-buildings.type = BooleanParameter
+neglect-adjacent-buildings.help = True if adjacent walls with neighboring buildings should be neglected. If set to True, the results might be less accurate (there might be insolation on attached walls and no adiabatic surfaces between adjacent buildings will be considered), but the simulation time will decrease somewhat.
+neglect-adjacent-buildings.category = Level of Details
+
+usr-bin-directory =
+usr-bin-directory.type = PathParameter
+usr-bin-directory.help = Path to the USR binaries. This path will be used instead of the default CEA Dependencies.
+usr-bin-directory.category = Advanced
+
+update-shadow-day = 15
+update-shadow-day.type = RealParameter
+update-shadow-day.help = Shadow update frequency, i.e., the interval (in days) to update the shadow calculation results. When set to 1, shadows are calculated on an hourly basis.
+update-shadow-day.category = Level of Details
+
 [radiation]
 buildings =
 buildings.type = BuildingsParameter
