--- a/cea/default.config
+++ b/cea/default.config
@@ -1789,12 +1789,12 @@ facet-by-rows.category = X-axis settings
 x-sorted-by = by_default
 x-sorted-by.type = ChoiceParameter
 x-sorted-by.choices = default, construction_year, gross_floor_area, conditioned_floor_area, roof_area
-x-sorted-by.help = Select the sorting method (from high to low) for the X-axis, when X-to-plot is set to by building choices.
+x-sorted-by.help = Select the sorting method (from low to high) for the X-axis, when X-to-plot is set to by building choices.
 x-sorted-by.category = X-axis settings
 
 x-sorted-reversed = False
 x-sorted-reversed.type = BooleanParameter
-x-sorted-reversed.help = Ture to sort from low to high.
+x-sorted-reversed.help = Ture to sort from high to low.
 x-sorted-reversed.category = X-axis settings
 
 x-label =
