ready before water mark, signature

--- a/cea/default.config
+++ b/cea/default.config
@@ -1778,6 +1778,7 @@ x-to-plot.help = Select the column to plot on the X-axis.
 
 facet-by-numbers-wrapped = 3
 facet-by-numbers-wrapped.type = IntegerParameter
+facet-by-numbers-wrapped.nullable = true
 facet-by-numbers-wrapped.help = Number of columns or rows to wrap.
 facet-by-numbers-wrapped.category = X-axis settings
 
