--- a/cea/default.config
+++ b/cea/default.config
@@ -1795,7 +1795,7 @@ x-sorted-by.category = X-axis settings
 
 x-sorted-reversed = False
 x-sorted-reversed.type = BooleanParameter
-x-sorted-reversed.help = Ture to sort from high to low.
+x-sorted-reversed.help = True to sort from high to low.
 x-sorted-reversed.category = X-axis settings
 
 x-label =
