--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -64,7 +64,8 @@ Solar Radiation Analysis:
     interfaces: [cli, dashboard]
     module: cea.resources.radiationUSR.main
     parameters: ['general:scenario', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free', 'general:debug',
-                 radiation-usr]
+                 radiation-usr,
+                 'radiation:zone-geometry', 'radiation:surrounding-geometry', 'radiation:neglect-adjacent-buildings']
     input-files:
       - [get_building_architecture]
       - [get_surroundings_geometry]
