--- a/cea/default.config
+++ b/cea/default.config
@@ -1757,9 +1757,9 @@ plot-title.type = StringParameter
 plot-title.nullable = true
 plot-title.help = Customise the plot title.
 
-plot-type = bar_plot
+plot-type = bar_plot_grouped
 plot-type.type = ChoiceParameter
-plot-type.choices = bar_plot
+plot-type.choices = bar_plot_group, bar_plot_stack, bar_plot_stack_percentage
 plot-type.help = Select the type of plot.
 
 buildings =
@@ -1799,12 +1799,6 @@ y-step.type = RealParameter
 y-step.nullable = true
 y-step.help = Set the step size for the Y-axis.
 y-step.category = Y-axis settings
-
-y-barmode = group
-y-barmode.type = ChoiceParameter
-y-barmode.choices = group, stack, stack_percentage
-y-barmode.help = Select the barmode for the Y-axis.
-y-barmode.category = Y-axis settings
 
 y-label =
 y-label.type = StringParameter
