Rename to radiationCRAX and add binary for macOS
Co-Authored-By: Xiaoyu Wang <95012084+wanglittlerain@users.noreply.github.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,3 +13,4 @@ recursive-include cea/plots *.html
 recursive-include cea/tests *.config *.yml
 
 graft cea/resources/radiation/bin
+graft cea/resources/radiationCRAX/bin
