reorg a bit the config file

--- a/cea/default.config
+++ b/cea/default.config
@@ -130,21 +130,6 @@ buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings considered for the radiation simulation in the format of [BuildingID1, BuildingID2, ...]. Leave blank when simulating all buildings.
 
-albedo = 0.2
-albedo.type = RealParameter
-albedo.help = Albedo of the terrain.
-albedo.category = Parameters for crax
-
-calculate-sensor-data = true
-calculate-sensor-data.type = BooleanParameter
-calculate-sensor-data.help =  False to only calculate total radiation for each building-facing orientation via polygon clipping method. If only demand calculations are needed, set it to false; if need to calculate radiation data for each grid point (only needed for running solar technologies), set it to true.
-calculate-sensor-data.category = Advanced
-
-using-cea-sensor = true
-using-cea-sensor.type = BooleanParameter
-using-cea-sensor.help =  True to use the cea-daysim method to generate sensor csv files. False to use the CRAX method to generate sensor csv files (more fast).
-using-cea-sensor.category = Advanced
-
 roof-grid = 3
 roof-grid.type = RealParameter
 roof-grid.help =  Grid resolution of the roof surfaces (m) for CRAX grid generation method.
@@ -170,6 +155,21 @@ neglect-adjacent-buildings.type = BooleanParameter
 neglect-adjacent-buildings.help = True if adjacent walls with neighboring buildings should be neglected. If set to True, the results might be less accurate (there might be insolation on attached walls and no adiabatic surfaces between adjacent buildings will be considered), but the simulation time will decrease somewhat.
 neglect-adjacent-buildings.category = Level of Details
 
+albedo = 0.2
+albedo.type = RealParameter
+albedo.help = Albedo of the terrain.
+albedo.category = Parameters for CRAX
+
+calculate-sensor-data = true
+calculate-sensor-data.type = BooleanParameter
+calculate-sensor-data.help =  True if intended to calculate solar energy potentials. False if intended to skip all solar energy potential calculations and for faster results.
+calculate-sensor-data.category = Parameters for CRAX
+
+using-cea-sensor = true
+using-cea-sensor.type = BooleanParameter
+using-cea-sensor.help =  True to use the native CEA-DAYSIM method to generate sensors. False to use the CRAX method. (This is a placeholder and does not do anything currently.)
+using-cea-sensor.category = Parameters for CRAX
+
 crax-bin-directory =
 crax-bin-directory.type = PathParameter
 crax-bin-directory.help = Path to the CRAX binaries. This path will be used instead of the default CEA Dependencies.
@@ -184,16 +184,6 @@ update-shadow-day.category = Level of Details
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings considered for the radiation simulation. Leave blank when simulating all buildings.
-
-use-latest-daysim-binaries = true
-use-latest-daysim-binaries.type = BooleanParameter
-use-latest-daysim-binaries.help = True to use the latest Daysim binaries which is faster and able to run larger sites, yet producing non-deterministic results. False to use old binary for reproducibility. Applicable only to Windows and will be ignored otherwise.
-use-latest-daysim-binaries.category = Advanced
-
-albedo = 0.2
-albedo.type = RealParameter
-albedo.help = Albedo of the terrain.
-albedo.category = Parameters for DAYSIM
 
 roof-grid = 10
 roof-grid.type = RealParameter
@@ -224,6 +214,16 @@ neglect-adjacent-buildings = false
 neglect-adjacent-buildings.type = BooleanParameter
 neglect-adjacent-buildings.help = True if adjacent walls with neighboring buildings should be neglected. If set to True, the results might be less accurate (there might be insolation on attached walls and no adiabatic surfaces between adjacent buildings will be considered), but the simulation time will decrease somewhat.
 neglect-adjacent-buildings.category = Level of Details
+
+use-latest-daysim-binaries = true
+use-latest-daysim-binaries.type = BooleanParameter
+use-latest-daysim-binaries.help = True to use the latest Daysim binaries which is faster and able to run larger sites, yet producing non-deterministic results. False to use old binary for reproducibility. Applicable only to Windows and will be ignored otherwise.
+use-latest-daysim-binaries.category = Advanced
+
+albedo = 0.2
+albedo.type = RealParameter
+albedo.help = Albedo of the terrain.
+albedo.category = Parameters for DAYSIM
 
 rad-ab = 4
 rad-ab.type = IntegerParameter
