--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -46,8 +46,7 @@ Solar Radiation Analysis:
     description: This Feature uses DAYSIM to perform solar radiation analysis.
     interfaces: [cli, dashboard]
     module: cea.resources.radiation.main
-    parameters: ['general:scenario', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free', 'general:debug',
-                 radiation]
+    parameters: [radiation, 'general:scenario', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free', 'general:debug']
     input-files:
       - [get_building_architecture]
       - [get_surroundings_geometry]
@@ -60,7 +59,7 @@ Solar Radiation Analysis:
     description: |
       **This is currently in active development and may not work as expected.**  
       
-      This feature uses Tongji's CRAX (CityRadiation Accelerator) model to perform comprehensive analyses of urban solar radiation,
+      This feature uses Tongji University's CRAX (CityRadiation Accelerator) model to perform comprehensive analyses of urban solar radiation,
       encompassing direct, diffuse, and reflected components. 
       It employs the Polygon Clipping Shadow method combined with a "Neighbourhood Shading Building Surfaces" filtering criterion
       to fast assess building solar exposure in dense urban environments.
@@ -68,8 +67,7 @@ Solar Radiation Analysis:
       Reference: https://doi.org/10.1016/j.buildenv.2022.109937
     interfaces: [cli, dashboard]
     module: cea.resources.radiationCRAX.main
-    parameters: ['general:scenario', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free', 'general:debug',
-                 radiation-crax]
+    parameters: [radiation-crax, 'general:scenario', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free', 'general:debug']
     input-files:
       - [get_building_architecture]
       - [get_surroundings_geometry]
