--- a/cea/default.config
+++ b/cea/default.config
@@ -130,6 +130,10 @@ buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings considered for the radiation simulation in the format of [BuildingID1, BuildingID2, ...]. Leave blank when simulating all buildings.
 
+calculate-sensor-data = true
+calculate-sensor-data.type = BooleanParameter
+calculate-sensor-data.help =  True if intended to calculate solar energy potentials. False if intended to skip all solar energy potential calculations and for faster results.
+
 roof-grid = 3
 roof-grid.type = RealParameter
 roof-grid.help =  Grid resolution of the roof surfaces (m) for CRAX grid generation method.
@@ -160,14 +164,9 @@ albedo.type = RealParameter
 albedo.help = Albedo of the terrain.
 albedo.category = Parameters for CRAX
 
-calculate-sensor-data = true
-calculate-sensor-data.type = BooleanParameter
-calculate-sensor-data.help =  True if intended to calculate solar energy potentials. False if intended to skip all solar energy potential calculations and for faster results.
-calculate-sensor-data.category = Parameters for CRAX
-
 using-cea-sensor = true
 using-cea-sensor.type = BooleanParameter
-using-cea-sensor.help =  True to use the native CEA-DAYSIM method to generate sensors. False to use the CRAX method. (This is a placeholder and does not do anything currently.)
+using-cea-sensor.help =  True to use the native CEA-DAYSIM method to generate sensors. False to use the CRAX method. (This is a placeholder and either choice is using the CEA-DAYSIM method.)
 using-cea-sensor.category = Parameters for CRAX
 
 crax-bin-directory =
@@ -178,7 +177,7 @@ crax-bin-directory.category = Advanced
 update-shadow-day = 15
 update-shadow-day.type = RealParameter
 update-shadow-day.help = Shadow update frequency, i.e., the interval (in days) to update the shadow calculation results. When set to 1, shadows are calculated on an hourly basis.
-update-shadow-day.category = Level of Details
+update-shadow-day.category = Parameters for CRAX
 
 [radiation]
 buildings =
