--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,6 @@ dependencies:
 - deap
 - ephem
 - fiona
-- aiocache
 - geopandas=0.13 # Due to python3.8 support
 - libpysal
 - networkx=2.8
@@ -38,6 +37,7 @@ dependencies:
 - git
 - yarn=4 # Use latest version of yarn
 - pip:
+  - aiocache[redis]
   - fastapi
   - pydantic-settings
   - uvicorn
